# NNLander

./: .gitignore  CMakeLists.txt
Common/: Simulation.h  TemplateFeedForward.hpp
Lander05/: CMakeLists.txt  TrainingTaskGA.h  lander05.cpp
tests/: CMakeLists.txt  FeedForward_benchmark.cpp  FeedForward_test.cpp  fixiture.hpp  matrix_multiplication_test.cpp  trainingBenchmark.hpp  trainingBenchmark04.cpp  trainingBenchmark05.cpp
